tests/core/negative/structs/unknown_field.vais
struct Point {
    x: i64,
    y: i64,
}

fn main() -> i64 {
    p: Point := Point { x: 1, z: 2 }
    return p.x
}
